SonarDelphi 3.6